# red-monkey

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Rocket.toml  build.rs  deny.toml  docker-compose.yml  docker.env
.github/: CODEOWNERS
.github/workflows/: cla.yml  main.yml
docs/: red-monkey.postman_collection.json  swagger-fault-config-server.yaml
examples/: cmd.rs
src/: config.rs  main.rs  store.rs
src/fault_config_server/: handler.rs  routes.rs  server.rs
src/proxy/: connection.rs  faulter.rs  mod.rs  resp_util.rs
src/server/: handler.rs  routes.rs
src/store/: fault_store.rs  mem_store.rs  mod.rs  store.rs
