[package]
name = "red-monkey"
version = "0.1.0"
authors = ["AjithPanneerselvam <ajithpanneerselvam20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "red-monkey"
path = "src/main.rs"

[dependencies]
envy = "0.4"
redis = "0.19.0"
serde = "1.0.117"
serde_derive = "1.0.117"
bincode = "1.0"
serde_json = "1"
log  = "0.4.11"
env_logger = "0.8.1"
futures = "0.3.8"
chashmap = "2.2.0"
tokio = { version="1.2.0", features=["net","io-util", "macros", "rt-multi-thread"] } 
tokio-util = { version="0.6.3", features=["codec", "io"] }
bytes = "1"
rocket = "0.4.3"
rocket_contrib = "0.4.3" 
rocket_codegen = "0.4.3"
chrono = {version="0.4.19", features=["serde"]}
resp = "^0.3.6"
thiserror = "1.0"

[[example]]
name = "cmd"
path = "examples/cmd.rs"
