[package]
name = "red-monkey"
version = "0.1.0"
authors = ["AjithPanneerselvam <ajithpanneerselvam20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "red-monkey"
path = "src/main.rs"

[dependencies]
envy = "0.4"
redis = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.117"
serde_json = "1"
log  = "0.4.11"
url = "2.2.2"
env_logger = "0.9.0"
futures = "0.3.8"
chashmap = "2.2.0"
tokio = { version="1.2.0", features=["net","io-util", "macros", "rt-multi-thread", "time", "tracing"] } 
tokio-util = { version="0.6.3", features=["codec", "io"] }
tokio-native-tls = "0.3.0"
bytes = "1"
actix-web = "4"
tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = {version = "0.3.8", features = ["env-filter"]}
tracing-bunyan-formatter = "0.3.2"
tracing-actix-web = "=0.5"
chrono = {version="0.4.19", features=["serde"]}
resp = "^0.3.6"
thiserror = "1.0"
anyhow = "1.0.53"
uuid = "0.8.2"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }


[[example]]
name = "cmd"
path = "examples/cmd.rs"
